# vslicer

./: .dockerignore  .gitignore  LICENSE  README.md  install.bat  mpv_input.conf  pyproject.toml  ruff.toml  windows_gui.bat  windows_run.bat
.devcontainer/: devcontainer.json  postCreate.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: run_gui.sh
src/vslicer/: __init__.py
src/vslicer_cli/: __init__.py  main.py
src/vslicer_cli/ui/: controls.py  prompts.py  status.py
src/vslicer_core/: __init__.py  browser_profiles.py  clipboard.py  config.py  exceptions.py
src/vslicer_core/domain/: models.py  validate.py
src/vslicer_core/export/: ffmpeg.py  filters.py  progress.py
src/vslicer_core/mpv/: client.py  ipc.py  process.py
src/vslicer_core/services/: __init__.py  export.py  playback.py
src/vslicer_gui/: __init__.py  app.py  export_worker.py  main_window.py
src/vslicer_gui/dialogs/: __init__.py  export_dialog.py
src/vslicer_gui/widgets/: __init__.py  seek_slider.py  video_view.py
tests/unit/: test_clipboard.py  test_config.py  test_crop.py  test_ffmpeg_builder.py  test_filters.py  test_models.py  test_mpv_client.py  test_progress.py  test_run_ffmpeg.py  test_services.py  test_validate.py
